--- a/lecture-notes/c3.md
+++ b/lecture-notes/c3.md
@@ -68,6 +68,7 @@ to use one of our columns as the x-axis by adding an 'x' attribute to the data:
 ```
 var chart = c3.generate({
     data: {
+        bindto: '#chart',
         x: 'x',
         columns: [
             ['x', '2013-01-01', '2013-01-02', '2013-01-03', '2013-01-04', '2013-01-05', '2013-01-06'],
@@ -88,6 +89,30 @@ var chart = c3.generate({
 
 [TODO: pic]
 
+# Bar Chart
+
+A bar chart is very similar, we just need to use `type: bar`.
+
+```
+var chart = c3.generate({
+    data: {
+        bindto: "#chart",
+        columns: [
+            ['data1', 30, 200, 100, 400, 150, 250],
+            ['data2', 130, 100, 140, 200, 150, 50]
+        ],
+        type: 'bar'
+    },
+    bar: {
+        width: {
+            ratio: 0.5 // this makes bar width 50% of length between ticks
+        }
+        // or
+        //width: 100 // this makes bar width 100px
+    }
+});
+```
+
 # Scatter chart
 
 To make a scatter chart we set `type : 'scatter'` and we use the `xs` attribute
@@ -96,6 +121,7 @@ to specify a x-series for each y-series:
 ```
 var chart = c3.generate({
     data: {
+        bindto: "#chart",
         xs: {
             setosa: 'setosa_x',
             versicolor: 'versicolor_x',
@@ -123,9 +149,75 @@ var chart = c3.generate({
 });
 ```
 
-# Other Charts
+[TODO: pic]
 
-Read the documentation
+
+
+# Multiple Types
+
+You can have multiple types on the chart by using `types` instead of `type`
+and passing it an object with series names as keys:
+
+```
+var chart = c3.generate({
+    data: {
+        bindto: "#chart",
+        columns: [
+            ['data1', 30, 200, 100, 400, 150, 250],
+            ['data2', 130, 100, 140, 200, 150, 50]
+        ],
+        types: {
+          data1 : 'bar',
+          data2 : 'line'
+        }
+    }
+});
+```
+
+# Formatting Individual Points: Color
+
+You can format individual points by passing a color function:
+
+```
+var chart = c3.generate({
+    data: {
+        bindto: "#chart",
+        columns: [
+            ['data1', 30, 200, 100, 400, 150, 250],
+            ['data2', 130, 100, 140, 200, 150, 50]
+        ],
+        types: {
+          data1 : 'bar',
+          data2 : 'line'
+        },
+        color: function(color, d) {
+          // points with value equal to 100 will be black
+          return d.value == 100 ? '#000000' : color;
+        }
+    }
+});
+```
+
+# Actions
+
+You can also use `onmouseover` or `onclick` or other event handlers:
+
+```
+var chart = c3.generate({
+    data: {
+        bindto: "#chart",
+        columns: [
+            ['data1', 30, 200, 100, 400, 150, 250],
+            ['data2', 130, 100, 140, 200, 150, 50]
+        ],
+        types: {
+          data1 : 'bar',
+          data2 : 'line'
+        },
+        onclick: function(d) { alert(JSON.stringify(d)); }
+    }
+});
+
 
 # Loading Data Dynamically
 
@@ -167,4 +259,48 @@ getData(data_url, function(result) {
       columns: [ xs, ys ]
       });
 });
+```
+# Stupid Example: Swap on Click
+
+Imagine we have a bar graph where each point has a different color.
+We'd like to hook things up so that whenever we click on one of the bars
+it "swaps places" with the leftmost bar.  
+
+We can't really make the bars swap places.  But we can swap both their
+colors and values and then redraw the graph.  We start like this:
+
+```
+var COLORS = ['#001f3f','#0074D9','#7FDBFF','#39CCCC','#3D9970','#2ECC40',
+              '#01FF70','#FFDC00','#FF851B','#FF4136','#85144b','#F012BE',
+              '#B10DC9','#111111','#AAAAAA','#DDDDDD'];
+
+var chart = c3.generate({
+    data: {
+        bindto: "#chart",
+        columns: [
+            ['data1', 30, 200, 100, 400, 150, 250],
+        ],
+        color: function(color, d) { return COLORS[d.index]; },
+        type: 'bar',
+        onclick: function(d) { graphSwap(0, d.index); }
+    }
+});
+```
+
+And then just need to implement `graphSwap`:
+
+```
+function graphSwap(i, j) {
+  var values = chart.data.values('data1');
+  swap(values, i, j);
+  swap(COLORS, i, j);
+
+  // redraw the chart with the new values and colors
+  chart.load({
+    columns: [
+      ['data1'].concat(values)
+    ],
+    color: function(color, d) { return COLORS[d.index]; }
+  });
+}
 ```
